# ozya

./: .clang-format  .clang-tidy  CMakeLists.txt  INSTALL.sh  build.sh
include/: config.h  file_helper.h  gptlib.h  headers.h  http_request.h  result.h  sqllib.h  string_helper.h
resources/: config.json
src/: config.cpp  file_helper.cpp  gptlib.cpp  http_request.cpp  main.cpp  sqllib.cpp  string_helper.cpp
